[package]
name = "candentia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.*"
clap = { version = "3.*", features = ["cargo"] }
regex = "1.*"
log = "0.*"
log4rs = "1.*"
ansi_term = "0.*"