[package]
name = "candentia"
version = "0.1.0"
edition = "2021"
authors = ["Heru Handika <herubiolog@gmail.com>"]
license = "MIT"
description = "A cli tool for managing CT-Scan data to study evolutionary biology"
readme = "README.md"
homepage = "https://github.com/hhandika/candentia"
repository = "https://github.com/hhandika/candentia"
keywords = ["cli", "utility", "ct-scan", "evolutionary-biology"]
categories = ["command-line-utilities", "science"]

[dependencies]
walkdir = "2.*"
clap = { version = "3.*", features = ["cargo"] }
regex = "1.*"
log = "0.*"
log4rs = "1.*"
ansi_term = "0.*"